Bug 15984 - smbd: in contend_dirleases() don't bother checking when not enabled
Summary: smbd: in contend_dirleases() don't bother checking when not enabled
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Samba release manager
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2026-01-23 10:29 UTC by Ralph Böhme
Modified: 2026-02-27 09:36 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.22, 4.23 and 4.24 cherry-picked from master (1.17 KB, patch)
2026-02-17 15:59 UTC, Ralph Böhme
martins: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2026-01-23 10:29:42 UTC
Have patch, need bugnumber.
Comment 1 Samba QA Contact 2026-01-26 12:10:03 UTC
This bug was referenced in samba master:

f11bce483a6403d9ed250c874105248c8e9782e2
Comment 2 Ralph Böhme 2026-02-17 15:59:05 UTC
Created attachment 18847 [details]
Patch for 4.22, 4.23 and 4.24 cherry-picked from master
Comment 3 Martin Schwenke 2026-02-17 23:57:10 UTC
Hi Björn,

This is ready for 4.24, 4.23, 4.22.

Thanks!
Comment 4 Samba QA Contact 2026-02-18 12:42:29 UTC
This bug was referenced in samba v4-22-test:

eac3575b232ba3f0213109ce4cdfb583d683b43b
Comment 5 Samba QA Contact 2026-02-19 09:59:53 UTC
This bug was referenced in samba v4-22-stable (Release samba-4.22.8):

eac3575b232ba3f0213109ce4cdfb583d683b43b
Comment 6 Samba QA Contact 2026-02-23 15:21:36 UTC
This bug was referenced in samba v4-24-test:

bccbfb8a5c68bec98ff6ee4d56556788794231b7
Comment 7 Samba QA Contact 2026-02-23 20:06:48 UTC
This bug was referenced in samba v4-24-stable (Release samba-4.24.0rc3):

bccbfb8a5c68bec98ff6ee4d56556788794231b7
Comment 8 Samba QA Contact 2026-02-27 07:40:09 UTC
This bug was referenced in samba v4-23-test:

971fd7306bff42c7fb050e5df669da331142175a
Comment 9 Samba QA Contact 2026-02-27 09:36:39 UTC
This bug was referenced in samba v4-23-stable (Release samba-4.23.6):

971fd7306bff42c7fb050e5df669da331142175a