smbd: in contend_dirleases() don't bother checking when not enabled

BUG: https://bugzilla.samba.org/show_bug.cgi?id=15984

Signed-off-by: Ralph Boehme <slow@samba.org>
Reviewed-by: Martin Schwenke <martins@samba.org>

Autobuild-User(master): Ralph Böhme <slow@samba.org>
Autobuild-Date(master): Mon Jan 26 12:09:13 UTC 2026 on atb-devel-224

(cherry picked from commit f11bce483a6403d9ed250c874105248c8e9782e2)